# MuAlphaZeroLibrary

./: .gitignore  Dockerfile  README.md  backup.txt  env.py  requirements.txt  setup.py  test.py
.github/workflows/: python-publish.yml
CppSelfPlay/MCTS/: Node.cpp
CppSelfPlayDir/: CppSelfPlay.cpp  utils.h
CppSelfPlayDir/Buffers/: MuZeroFrameBuffer.cpp
CppSelfPlayDir/MCTS/: MuzeroSearchTree.cpp  Node.h
CppSelfPlayDir/Network/: MuZeroDefaultNet.cpp  MuZeroDefaultNet.h
CppSelfPlayDir/uuid_v4/: endianness.h  uuid_v4.h
connect4mz/: README.md  connect4_game.py  game_env.py  reinstall_lib.sh  run_training.sh  run_training_screen.sh  train_mz.py
connect4mz/wandb/: latest-run.10412  latest-run.11225  latest-run.12165  latest-run.13127  latest-run.15821  latest-run.15867  latest-run.16343  latest-run.16676  latest-run.17061  latest-run.17346  latest-run.17662  latest-run.17666  latest-run.17902  latest-run.18337  latest-run.18850  latest-run.18973  latest-run.19489  latest-run.19712  latest-run.19835  (+79 more)
examples/: donkey_kong.py
mu_alpha_zero/: __init__.py  config.py  main.py  mem_buffer.py  prepare_for_upload.py  root.root  save_best_params.py  shared_storage_manager.py  start_jobs.py  trainer.py
mu_alpha_zero/CppSelfPlayDir/: CMakeLists.txt  CppSelfPlay.cpp  main.cpp  utils.cpp  utils.h
mu_alpha_zero/CppSelfPlayDir/Buffers/: MuZeroFrameBuffer.cpp  MuZeroFrameBuffer.h
mu_alpha_zero/CppSelfPlayDir/MCTS/: MuzeroSearchTree.cpp  MuzeroSearchTree.h  Node.cpp
mu_alpha_zero/CppSelfPlayDir/Network/: MuZeroDefaultNet.cpp  MuZeroDefaultNet.h
wandb/: latest-run
(+417 files in other folders)
